tests/NormalTests/paczka1/fuzzy1/45889091.err
Error in line 14: RN5SYaL S205 142,0
Error in line 17: RN5SYaL S113 6,6
Error in line 26: ttWgDb8E63 S113 73,1
Error in line 25: c1oEs S113 3,2
Error in line 33: RN5SYaL S621 7,4
